--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,26 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  text-align: center;
+}
+
+h1 {
+  margin-bottom: 20px;
+}
+
 .board {
   display: grid;
   grid-template-columns: repeat(5, 50px);
   gap: 5px;
 }
+
 .cell {
   width: 50px;
   height: 50px;
@@ -10,6 +28,7 @@
   border: 1px solid black;
   cursor: pointer;
 }
+
 .is-off {
   background-color: black;
 }
